Mon Sep  1 14:00:04 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* README.EXT (Data-types): fixed for current status.
	  (Manipulating Ruby data): mentioned some more functions.
	  (Class/module definition): ditto.
	  (Global variables shared between C and Ruby): 
	    fixed prototypes for the getter/setter's of global variables.
	  (Appendix A): mentioned some more files.

	* README.EXT.ja: ditto.

Mon Sep  1 11:31:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (copy_stream, fu_copy_stream0, copy_file): use
	  IO.copy_stream to get rid of extraneous conversion.

Mon Sep  1 02:55:15 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* strftime.c (rb_strftime): calc timezone offset by myself if system
	  doesn't provide timezone info.

Mon Sep  1 02:48:28 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb: change "illegal" to "invalid".

Mon Sep  1 02:31:16 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb (transcode_generated_code): defined for
	  generating table at once.
	  (transcode_tblgen): returns an empty string.
	  (transcode_generate_node): ditto.

	* enc/trans/newline.trans: use transcode_generated_code.

	* enc/trans/iso2022.trans: ditto.

	* enc/trans/single_byte.trans: ditto.

	* enc/trans/utf_16_32.trans: ditto.

	* enc/trans/japanese.trans: ditto.

	* enc/trans/korean.trans: ditto.

Mon Sep  1 02:10:03 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb (citrus_decode_mapsrc): print logging
	  message on STDERR.

Mon Sep  1 01:24:09 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/eucjp-tbl.rb: replace by previous Citrus maps.

	* enc/trans/sjis-tble.rb: ditto.

Mon Sep  1 01:18:26 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tblgen.rb: add table generator from Citrus maps.

	* enc/trans/japanese.trans: use Citrus maps.

	* enc/trans/CP: add maps from Citrus.

	* enc/trans/JIS: ditto.

	* test/ruby/test_transcode.rb: Shift_JIS and EUC-JP doesn't support