@@ -1,3 +1,7 @@
+Mon Sep  1 14:24:14 2008  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* test/ruby/test_transcode.rb (test_windows_31j): added.
+
 Mon Sep  1 14:00:04 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* README.EXT (Data-types): fixed for current status.
